@@ -185,16 +185,6 @@ public interface JavaLangAccess {
     Package definePackage(ClassLoader cl, String name, Module module);
 
     /**
-     * Record the non-exported packages of the modules in the given layer
-     */
-    void addNonExportedPackages(ModuleLayer layer);
-
-    /**
-     * Invalidate package access cache
-     */
-    void invalidatePackageAccessCache();
-
-    /**
      * Defines a new module to the Java virtual machine. The module
      * is defined to the given class loader.
      *
@@ -487,6 +477,10 @@ public interface JavaLangAccess {
      */
     Object classData(Class<?> c);
 
+    int getCharsLatin1(long i, int index, byte[] buf);
+
+    int getCharsUTF16(long i, int index, byte[] buf);
+
     /**
      * Returns the {@link NativeLibraries} object associated with the provided class loader.
      * This is used by {@link SymbolLookup#loaderLookup()}.
@@ -629,10 +623,4 @@ public interface JavaLangAccess {
      * Are the string bytes compatible with the given charset?
      */
     boolean bytesCompatible(String string, Charset charset);
-
-    /**
-     * Is a security manager already set or allowed to be set
-     * (using -Djava.security.manager=allow)?
-     */
-    boolean allowSecurityManager();
 }
